syntax = "proto3";

package stage.v1;


service StageService {
    rpc GenerateProof(GenerateProofRequest) returns (GenerateProofResponse) {}
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
}

enum ExecutorStatus {
    EXECUTOR_STATUS_UNSPECIFIED = 0;
    EXECUTOR_STATUS_COMPUTING = 1;
    EXECUTOR_STATUS_SUCESS = 2;
    EXECUTOR_STATUS_FAILED = 3;
}

message BlockFileItem {
    string file_name = 1;
    bytes file_content = 2;
}

message GenerateProofRequest {
    uint64 chain_id = 1;
    uint64 timestamp = 2;
    string proof_id = 3;
    bytes elf_data = 4;
    repeated BlockFileItem block_data = 5;
    uint64 block_no = 6;
    uint32 seg_size = 7;
}

message GenerateProofResponse {
    int32 status = 1;
    string error_message = 2;
    string proof_id = 3;
    bytes result = 4;
}

message GetStatusRequest {
    string proof_id = 1;
}

message GetStatusResponse {
    string proof_id = 1;
    int32 status = 2;
    bytes result = 4;
}